@@ -2,7 +2,6 @@ package org.jmouse.template.node;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 
 abstract public class AbstractNode implements Node {
 
@@ -40,33 +39,22 @@ abstract public class AbstractNode implements Node {
     @Override
     public Node[] children() {
         Node[] nodes = new Node[this.children.size()];
-
         return this.children.toArray(nodes);
     }
 
     @Override
     public Node first() {
-        return hasChildren() ? children.get(0) : null;
+        return hasChildren() ? children.getFirst() : null;
     }
 
     @Override
     public Node last() {
-        return hasChildren() ? children.get(children.size() - 1) : null;
-    }
-
-    @Override
-    public boolean delete(Node node) {
-        return this.children.remove(node);
+        return hasChildren() ? children.getLast() : null;
     }
 
     @Override
     public void add(Node node) {
         if (this != node) {
-
-            if (Objects.nonNull(find(node, Order.ASC))) {
-                throw new NodeException("CIRCULAR REFERENCE: THE CURRENT NODE IS A DESCENDANT OF THE PASSED");
-            }
-
             node.parent(this);
             this.children.add(node);
         }
